--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .myCity {
     background: antiquewhite;
 }
@@ -6,7 +11,7 @@
     font-size: 50px;
     text-align: center;
 }
-.myCity img {
-    max-width: 100%;
-    height: auto;
+
+h5 {
+    font-size: 25px;
 }
